--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "lucide-react": "^0.400.0",
     "tailwindcss": "^3.4.0",
     "autoprefixer": "^10.4.20",
-    "postcss": "^8.4.40"
+    "postcss": "^8.4.40",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@types/node": "^20.14.0",
