--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "test:e2e": "playwright test"
+    "lint": "next lint"
   },
   "dependencies": {
     "next": "^14.2.0",
@@ -26,7 +25,6 @@
     "@types/node": "^20.14.0",
     "@types/react": "^18.3.0",
     "@types/react-dom": "^18.3.0",
-    "@playwright/test": "^1.47.0",
     "eslint": "^8.57.0",
     "eslint-config-next": "^14.2.0",
     "typescript": "^5.5.0"
