--- a/package.json
+++ b/package.json
@@ -10,15 +10,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.45.0",
+    "autoprefixer": "^10.4.20",
+    "axios": "^1.7.0",
+    "framer-motion": "^12.23.12",
+    "gsap": "^3.13.0",
+    "lottie-react": "^2.4.1",
+    "lucide-react": "^0.400.0",
     "next": "^14.2.0",
+    "postcss": "^8.4.40",
     "react": "^18.3.0",
     "react-dom": "^18.3.0",
-    "@supabase/supabase-js": "^2.45.0",
-    "axios": "^1.7.0",
-    "lucide-react": "^0.400.0",
     "tailwindcss": "^3.4.0",
-    "autoprefixer": "^10.4.20",
-    "postcss": "^8.4.40",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
