--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "postcss": "^8.4.40",
     "react": "^18.3.0",
     "react-dom": "^18.3.0",
+    "recharts": "^3.2.0",
     "tailwindcss": "^3.4.0",
     "xlsx": "^0.18.5"
   },
