실행 주기 최소 1시간으로 제한
- GitHub Actions 실행 주기를 15분에서 1시간으로 변경
- 자동검색 탭에서 최소 1시간 간격으로 설정 가능
- 3시간 옵션 추가로 더 세밀한 제어 가능
- 리소스 사용량 최적화 및 안정성 향상

--- a/.github/workflows/auto-search.yml
+++ b/.github/workflows/auto-search.yml
@@ -2,8 +2,8 @@ name: 자동 검색 실행
 
 on:
   schedule:
-    # 매 15분마다 체크하여 설정된 interval_hours에 따라 실행
-    - cron: '*/15 * * * *'
+    # 매 1시간마다 체크하여 설정된 interval_hours에 따라 실행
+    - cron: '0 * * * *'
   workflow_dispatch:
     inputs:
       schedule_id:
