--- a/.github/workflows/auto-search.yml
+++ b/.github/workflows/auto-search.yml
@@ -2,8 +2,8 @@ name: 자동 검색 실행
 
 on:
   schedule:
-    # 매 30분마다 체크하여 설정된 interval_hours에 따라 실행
-    - cron: '*/30 * * * *'
+    # 매 1시간마다 체크하여 설정된 interval_hours에 따라 실행
+    - cron: '0 * * * *'
   workflow_dispatch:
     inputs:
       schedule_id:
@@ -66,8 +66,8 @@ jobs:
             else
               # 마지막 실행 시간을 초로 변환
               LAST_RUN_TIME=$(date -d "$LAST_RUN_AT" -u +%s 2>/dev/null || echo "0")
-              # interval_hours가 소수점일 수 있으므로 awk를 사용하여 계산
-              INTERVAL_SECONDS=$(echo "$INTERVAL_HOURS" | awk '{print int($1 * 3600)}')
+              # interval_hours를 초로 변환
+              INTERVAL_SECONDS=$((INTERVAL_HOURS * 3600))
               TIME_DIFF=$((CURRENT_TIME - LAST_RUN_TIME))
               
               echo "설정 $CONFIG_ID: 마지막 실행 후 $TIME_DIFF초 경과, 필요 간격: $INTERVAL_SECONDS초"
