자동검색 스크립트 및 GitHub Actions 워크플로우 수정
- auto-search.js에서 잘못된 테이블명(search_results → auto_search_results) 수정
- config_id 필드 추가하여 설정과 결과 연결
- GitHub Actions 워크플로우에서 설정 ID 전달 방식 개선
- 각 설정별로 개별 실행하도록 수정

--- a/.github/workflows/auto-search.yml
+++ b/.github/workflows/auto-search.yml
@@ -97,8 +97,17 @@ jobs:
           export SUPABASE_URL="${{ secrets.NEXT_PUBLIC_SUPABASE_URL }}"
           export SUPABASE_SERVICE_KEY="${{ secrets.SUPABASE_SERVICE_ROLE_KEY }}"
           
-          # 자동 검색 스크립트 실행
-          node scripts/auto-search.js
+          # 실행할 설정 ID들을 배열로 변환
+          CONFIGS="${{ steps.get-configs.outputs.configs }}"
+          echo "실행할 설정들: $CONFIGS"
+          
+          # 각 설정별로 자동 검색 실행
+          for config_id in $CONFIGS; do
+            if [ -n "$config_id" ]; then
+              echo "설정 $config_id 실행 중..."
+              node scripts/auto-search.js $config_id
+            fi
+          done
 
       - name: 실행 결과 요약
         if: always()
