ci(auto-search): cast INTERVAL_SECONDS to integer (bc -l | awk) and quote test vars to avoid integer expression warning

--- a/.github/workflows/auto-search.yml
+++ b/.github/workflows/auto-search.yml
@@ -66,13 +66,13 @@ jobs:
             else
               # 마지막 실행 시간을 초로 변환
               LAST_RUN_TIME=$(date -d "$LAST_RUN_AT" -u +%s 2>/dev/null || echo "0")
-              # interval_hours를 초로 변환 (소수점 처리)
-              INTERVAL_SECONDS=$(echo "$INTERVAL_HOURS * 3600" | bc)
+              # interval_hours를 초로 변환 (소수점 처리 후 정수부만 사용)
+              INTERVAL_SECONDS=$(echo "$INTERVAL_HOURS * 3600" | bc -l | awk -F. '{print $1}')
               TIME_DIFF=$((CURRENT_TIME - LAST_RUN_TIME))
               
               echo "설정 $CONFIG_ID: 마지막 실행 후 $TIME_DIFF초 경과, 필요 간격: $INTERVAL_SECONDS초"
               
-              if [ $TIME_DIFF -ge $INTERVAL_SECONDS ]; then
+              if [ "$TIME_DIFF" -ge "$INTERVAL_SECONDS" ]; then
                 echo "설정 $CONFIG_ID: 실행 시간 도달"
                 EXECUTE_CONFIGS="$EXECUTE_CONFIGS $CONFIG_ID"
               else
