--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "^18.3.0",
     "react-dom": "^18.3.0",
     "recharts": "^3.2.0",
+    "sonner": "^2.0.7",
     "tailwindcss": "^3.4.0",
     "xlsx": "^0.18.5"
   },
