fix(github-actions): improve auto-search workflow reliability
- Add bc and jq installation steps
- Add error handling for API calls
- Add detailed logging for debugging
- Improve error messages and status reporting

--- a/.github/workflows/auto-search.yml
+++ b/.github/workflows/auto-search.yml
@@ -105,6 +105,8 @@ jobs:
           else
             echo "configs=" >> $GITHUB_OUTPUT
             echo "실행할 설정이 없습니다."
+            echo "현재 시간: $(date -u)"
+            echo "활성화된 설정 수: $(echo "$CONFIGS_JSON" | jq '. | length')"
           fi
 
       - name: 자동 검색 실행
