--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@supabase/supabase-js": "^2.45.0",
     "autoprefixer": "^10.4.20",
     "axios": "^1.7.0",
+    "exceljs": "^4.4.0",
     "framer-motion": "^12.23.12",
     "gsap": "^3.13.0",
     "lodash": "^4.17.21",
