--- a/env.example
+++ b/env.example
@@ -4,3 +4,7 @@
 
 # Supabase 설정 (Vercel + Supabase 통합 시 자동으로 설정됨)
 # SUPABASE_URL과 SUPABASE_ANON_KEY는 Vercel에서 자동 관리
+
+# 로그 정리 API 설정
+# CLEANUP_API_TOKEN=your_secure_token_here
+# CLEANUP_WEBHOOK_URL=https://hooks.slack.com/services/your/webhook/url (선택사항)
